# codeleap.backend

./: README.md  pyproject.toml  requirements.txt
codeleap_backend/: wsgi.py
codeleap_backend/codeleap_backend/: asgi.py  settings.py  urls.py  wsgi.py
codeleap_backend/posts/: admin.py  models.py  serializers.py  urls.py  views.py
codeleap_backend/posts/migrations/: 0001_initial.py
